# life_game

./: BasisWindow.cpp  BasisWindow.h  CMakeLists.txt  main.cpp  masu.cpp
